--- a/style.css
+++ b/style.css
@@ -442,6 +442,18 @@ a:hover {
   transition: all .3s;
 }
 
+.liuliangka {
+  height: 25px;
+  font-size: 16px;
+  font-family: PingFangSC-Regular, PingFang SC;
+  font-weight: 400;
+  color: #f81515;
+  line-height: 16px;
+  text-shadow: 0px 1px 2px #08a8ff;
+  margin-top: auto;
+  text-align: center;
+}
+
 .foot {
   height: 20px;
   font-size: 14px;
