--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ a:hover {
 	padding: 50px 20px;
 	padding-top: 100px;
 	display: flex;
-	background: url(background.jpg);
+	background: url(https://vip.helloimg.com/i/2024/06/21/6675170e293d3.jpg);
 	display: flex;
 }
 
