--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ body {
 
 /* ---代码分割线--- */
 shiju {
-	background: -webkit-linear-gradient(135deg,
+	background: linear-gradient(135deg,
 			#0eaf6d,
 			#ff6ac6 25%,
 			#147b96 50%,
@@ -100,27 +100,37 @@ shiju {
 	-webkit-text-fill-color: transparent;
 	/* 背景裁剪，即让文字使用背景色 */
 	-webkit-background-clip: text;
+	background-clip: text;
 	/* 背景图放大一下，看着柔和一些 */
 	-webkit-background-size: 200% 100%;
+	background-size: 200% 100%;
 	/* 应用动画flowCss 12秒速度 无限循环 线性匀速动画*/
 	-webkit-animation: flowCss 12s infinite linear;
+	animation: flowCss 12s infinite linear;
 	font-size: 16px;
 	/* 设置字体大小 */
 }
 
-@-webkit-keyframes flowCss {
+/* 定义动画 */
+@keyframes flowCss {
 	0% {
-		/* 移动背景位置 */
-		background-position: 0 0;
+		background-position: 0% 50%;
 	}
 
 	100% {
-		background-position: -400% 0;
+		background-position: 100% 50%;
 	}
 }
 
-shiju:hover {
-	-webkit-animation: flowCss 4s infinite linear;
+/* 兼容WebKit浏览器 */
+@-webkit-keyframes flowCss {
+	0% {
+		background-position: 0% 50%;
+	}
+
+	100% {
+		background-position: 100% 50%;
+	}
 }
 
 /* ---代码分割线--- */
