--- a/styles.css
+++ b/styles.css
@@ -508,7 +508,7 @@ colourful-text {
 premium {
 	margin: 10px 0;
 	/* 设置外边距 */
-	border: 2px solid #f78484;
+	border: 2px solid #0098f0;
 	/* 设置边框样式 */
 	border-radius: 12px;
 	/* 设置边框圆角 */
