--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ td,
 textarea,
 th {
 	/* 设置字体系列，包括多种备用字体 */
-	font-family: 华文楷体, Quicksand, sans-serif, SimSun, Microsoft Yahei, Hiragino Sans GB, Helvetica Neue, Helvetica, tahoma, arial, Verdana, sans-serif, WenQuanYi Micro Hei, "\5B8B\4F53";
+	font-family: Quicksand, 华文楷体, Hiragino Sans GB, Helvetica, Arial, sans-serif, 微软雅黑, 宋体, 黑体, Microsoft Yahei,SimSun,sans-serif, Helvetica Neue, Helvetica, tahoma, arial, Verdana, sans-serif, WenQuanYi Micro Hei,Oxygen-Sans;
 	/* 设置字体大小 */
 	font-size: 12px;
 	/* 设置字体颜色 */
