--- a/styles.css
+++ b/styles.css
@@ -505,20 +505,20 @@ colourful-text {
 }
 
 /* ---代码分割线--- */
-premium {
+zanzhu {
 	margin: 10px 0;
 	/* 设置外边距 */
-	border: 2px solid #0098f0;
+	border: 2px solid #f57f70;
 	/* 设置边框样式 */
 	border-radius: 12px;
 	/* 设置边框圆角 */
 	padding: 10px;
 	/* 设置内边距 */
-	font-size: 16px;
+	font-size: 12px;
 	/* 设置字体大小 */
 	font-weight: bold;
 	/* 设置字体粗细 */
-	color: #0099fa;
+	color: #6a48f4;
 	/* 设置字体颜色 */
 	line-height: 2;
 	/* 设置行高 */
@@ -567,3 +567,22 @@ footer p {
 }
 
 /* ---代码分割线--- */
+biaoqian {
+	margin: 10px 0;
+	/* 设置外边距 */
+	border: 2px solid #d2d2d2;
+	/* 设置边框样式 */
+	border-radius: 8px;
+	/* 设置边框圆角 */
+	padding: 4px;
+	/* 设置内边距 */
+	font-size: 8px;
+	/* 设置字体大小 */
+	font-weight: bold;
+	/* 设置字体粗细 */
+	color: #c4c3c3;
+	/* 设置字体颜色 */
+	line-height: 2;
+	/* 设置行高 */
+	margin-left: 4px;
+}
