--- a/styles.css
+++ b/styles.css
@@ -492,13 +492,13 @@ colourful-text {
 	/* 设置字体粗细 */
 	font-weight: 700;
 	/* 设置背景渐变 */
-	background: linear-gradient(90deg, #cbe7f7cb, #ffffff, #ffffff, #ffffff) 0/400%;
+	background: linear-gradient(90deg, #ebe8e8cb, #c5c5c5, #ffffff, #ffffff) 0/400%;
 	/* 设置定位 */
 	position: relative;
 	/* 设置层叠顺序 */
 	z-index: 1;
 	/* 设置阴影效果 */
-	box-shadow: 0 0 10px #00000033;
+	box-shadow: 0 0 10px #88888833;
 	/* 设置容器为弹性盒子布局 */
 	display: flex;
 	/* 垂直居中对齐子元素 */
