--- a/styles.css
+++ b/styles.css
@@ -280,7 +280,7 @@ colourful-text {
 	/* 设置字体粗细 */
 	font-weight: 700;
 	/* 设置背景渐变 */
-	background: linear-gradient(90deg, #0d9ffa, #0454a0, #11a0ff, #2c91f6) 400% / 400%;
+	background: linear-gradient(90deg, #0d9ffa, #93c4f1, #11a0ff, #98bfe6) 400% / 400%;
 	/* 设置定位方式 */
 	position: relative;
 	/* 设置层级 */
