--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -492,7 +492,7 @@ footer {
 footer p {
 	margin-bottom: 0;
 	/* 设置底部边距为0 */
-	color: #000000;
+	color: #2680f6;
 	/* 设置文本颜色为黑色 */
 	letter-spacing: 1px;
 	/* 设置字母间距为1像素 */
