--- a/CSS/style.css
+++ b/CSS/style.css
@@ -83,7 +83,14 @@ a {
     height: 80px;
     border-radius: 50%;
     box-shadow: 0px 5px 50px 0px #fb8bb6, 0px 0px 0px 7px rgba(252, 51, 185, 0.5);
-        /* 设置阴影效果 */
+    /* 设置阴影效果 */
+}
+
+.location img {
+    vertical-align: middle;
+    width: 2em;
+    height: 2em;
+    text-align: center;
 }
 
 .main {
